--- a/package.json
+++ b/package.json
@@ -21,12 +21,14 @@
   "dependencies": {
     "@hapi/boom": "^9.1.4",
     "cors": "^2.8.5",
+    "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "faker": "^5.5.3",
     "helmet": "^4.6.0",
-    "joi": "^17.4.2"
+    "joi": "^17.4.2",
+    "pg": "^8.7.1"
   },
-  "engines":{
-    "node":"16.x"
+  "engines": {
+    "node": "16.x"
   }
 }
