--- a/package.json
+++ b/package.json
@@ -26,7 +26,10 @@
     "faker": "^5.5.3",
     "helmet": "^4.6.0",
     "joi": "^17.4.2",
-    "pg": "^8.7.1"
+    "pg": "^8.7.1",
+    "pg-hstore": "^2.3.4",
+    "sequelize": "^6.12.0-alpha.1",
+    "uuid": "^8.3.2"
   },
   "engines": {
     "node": "16.x"
