--- a/.sequelizerc
+++ b/.sequelizerc
@@ -1,5 +1,6 @@
-module,exports = {
-  'config': './db/config.js/',
-  'models-path': './db/models/',
-  'migrations-path': './db/seeders/'
+module.exports = {
+  'config': './src/db/config.js/',
+  'models-path': './src/db/models/',
+  'migrations-path': './src/db/migrations/',
+  'seeders-path': './src/db/seeders/'
 }
