--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "nodemon ./src/index.js",
+    "test": "mocha",
     "start": "node ./src/index.js",
     "lint": "eslint",
     "migrations:generate": "sequelize-cli migration:generate --name",
@@ -13,12 +14,14 @@
     "migrations:delete": "sequelize-cli db:migrate:undo:all"
   },
   "keywords": [],
-  "author": "",
+  "author": "David Ramirez <davo.rmz@gmail.com>",
   "license": "ISC",
   "devDependencies": {
+    "chai": "^4.3.4",
     "eslint": "^8.3.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
+    "mocha": "^9.1.3",
     "nodemon": "^2.0.15",
     "prettier": "^2.4.1",
     "sequelize-cli": "^6.3.0"
