--- a/package.json
+++ b/package.json
@@ -23,8 +23,7 @@
     "eslint-plugin-prettier": "^4.0.0",
     "mocha": "^9.1.3",
     "nodemon": "^2.0.15",
-    "prettier": "^2.4.1",
-    "sequelize-cli": "^6.3.0"
+    "prettier": "^2.4.1"
   },
   "dependencies": {
     "@hapi/boom": "^9.1.4",
@@ -37,7 +36,8 @@
     "pg": "^8.7.1",
     "pg-hstore": "^2.3.4",
     "sequelize": "^6.12.0-alpha.1",
-    "uuid": "^8.3.2"
+    "uuid": "^8.3.2",
+    "sequelize-cli": "^6.3.0"
   },
   "engines": {
     "node": "16.x"
