--- a/.env_example
+++ b/.env_example
@@ -4,3 +4,5 @@ DB_PASSWORD='admin123'
 DB_HOST='localhost'
 DB_NAME='yard_sale'
 DB_PORT='5432'
+DATABASE_URL='POSTGRES://yard_client:admin123@172.19.0.2:5432/yard_sale'
+API_KEY=123
