--- a/.env_example
+++ b/.env_example
@@ -1,8 +1,10 @@
-PORT=3000
+APP_PORT=3000
 DB_USER='yard_client'
 DB_PASSWORD='admin123'
 DB_HOST='localhost'
 DB_NAME='yard_sale'
 DB_PORT='5432'
 DATABASE_URL='POSTGRES://yard_client:admin123@172.19.0.2:5432/yard_sale'
-API_KEY=123
+SEC_API_KEY=
+SEC_SALT=
+SEC_JWT_SECRET=
